--- a/Styles/style.css
+++ b/Styles/style.css
@@ -96,24 +96,17 @@ header nav>ul>li>a:hover {
     /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); */
 }
 
-main{
-    position: relative;
-    min-height: 100vh; /* Cambiado de 400px a 100vh */
-    height: 100vh;     /* Asegura que ocupe toda la altura de la ventana */
+#inicio{
+    height: 100vh;
     display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
-    overflow: hidden;
-} 
-
-
+}
 
 #inicio .text_main {
-    position: relative;
-    z-index: 3;
     color: black;
     text-align: center;
-    width: 100%;
 }
 
 #inicio .btn_access_main a {
@@ -126,6 +119,19 @@ main{
     margin-top:15px ;
     transition: background 0.2s;
     display: inline-block;
+}
+
+.img_main{
+    background: rgba(0, 83, 161, 0.55); /* Azul con transparencia */
+    width: 550px;
+    height: 550px;
+    display: flex;
+}
+
+.img_main img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
@@ -227,13 +233,23 @@ main{
     padding: 20px;
 }
 
+.productos-galery{
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+    justify-content: center;  
+}
+
 .items-store{
+    display: none;
+    margin-bottom: 20px;
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
 }
+
 
 .item{
     background: #fff;
@@ -250,7 +266,6 @@ main{
     width: 100%;
     height: 250px;
     object-fit: cover;
-    border-radius: 8px;
 }
 
 .item h3 {
