--- a/Styles/style.css
+++ b/Styles/style.css
@@ -103,7 +103,7 @@ header nav>ul>li>a:hover {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background: #f0f0f0;
+    background: #fff;
 }
 
 #inicio .text_main {
@@ -119,7 +119,7 @@ header nav>ul>li>a:hover {
 }
 
 #inicio .text_main h1{ 
-    font-size: 90px;  
+    font-size: 120px;  
     font-family:'Signature', Arial, sans-serif; 
     font-weight: normal;
     font-style: normal; 
@@ -465,7 +465,6 @@ footer {
     color: #fff;
     padding: 20px;
     text-align: center;
-    margin-top: 40px;
     box-shadow: 0 -2px 8px rgba(0,0,0,0.04);
 }
 
