--- a/includes/IPhones.html
+++ b/includes/IPhones.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
 
-
-
-
-
     <div class="items-store" id="items-iphones">
-        
+         
         <!-- IPhones 11 -->
         <div class="item" data-category="IPhone">
             <img src="../img/IPhone 11 64GB.png" alt="IPhone 11">
             <h3>IPhone 11</h3>
             <button class="btn-item" data-title="IPhone 11" data-img="../img/IPhone 11 64GB.png" data-capacidad="64 GB"
                 data-ram="4 GB" data-pantalla="6.1 Liquid Retina IPS LCD (828 x 1792 px, 326 ppi)" data-precio="$250">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -29,7 +23,7 @@
             <h3>IPhone 11</h3>
             <button class="btn-item" data-title="IPhone 11" data-img="../img/IPhone 11 128GB.png" data-capacidad="128 GB"
                 data-ram="4 GB" data-pantalla="6.1 Liquid Retina IPS LCD (828 x 1792 px, 326 ppi)" data-precio="$270">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -39,7 +33,7 @@
             <button class="btn-item" data-title="IPhone 11 Pro" data-img="../img/IPhone 11 Pro 64GB.png"
                 data-capacidad="64 GB" data-ram="4 GB"
                 data-pantalla="5.8 Super Retina XDR OLED (1125 x 2436 px, 458 ppi)" data-precio="$290">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -49,7 +43,7 @@
             <button class="btn-item" data-title="IPhone 11 Pro Max" data-img="../img/IPhone 11 Pro Max 64GB.png"
                 data-capacidad="64 GB" data-ram="4 GB"
                 data-pantalla="6.5 Super Retina XDR OLED (1242 x 2688 px, 458 ppi)" data-precio="$320">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -59,18 +53,18 @@
             <button class="btn-item" data-title="IPhone 11 Pro Max" data-img="../img/IPhone 11 Pro Max 256GB.png"
                 data-capacidad="265 GB" data-ram="4 GB"
                 data-pantalla="6.5 Super Retina XDR OLED (1242 x 2688 px, 458 ppi)" data-precio="$350">
-                Ver información
+                Detalles
             </button>
         </div>
 
         <!-- IPhones 12 -->
 
         <div class="item" data-category="IPhone">
-            <img src="../img/IPhone_12_64.png" alt="IPhone 11">
+            <img src="../img/IPhone 12 64GB.png" alt="IPhone 11">
             <h3>IPhone 12</h3>
-            <button class="btn-item" data-title="IPhone 12" data-img="../img/IPhone_12_64.png" data-capacidad="64 GB"
+            <button class="btn-item" data-title="IPhone 12" data-img="../img/IPhone 12 64GB.png" data-capacidad="64 GB"
                 data-ram="8 GB" data-pantalla="6.1 Super Retina XDR OLED (1170 x 2532 px, 460 ppi)" data-precio="$270">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -79,7 +73,7 @@
             <h3>IPhone 12</h3>
             <button class="btn-item" data-title="IPhone 12" data-img="../img/IPhone 12 128GB.png" data-capacidad="128 GB"
                 data-ram="8 GB" data-pantalla="6.1 Super Retina XDR OLED (1170 x 2532 px, 460 ppi)" data-precio="$315">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -89,7 +83,7 @@
             <button class="btn-item" data-title="IPhone 12 Pro" data-img="../img/IPhone 12 Pro 512GB.png"
                 data-capacidad="512 GB" data-ram="6 GB"
                 data-pantalla="6.1 Super Retina XDR OLED (1170 x 2532 px, 460 ppi) " data-precio="$350">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -99,7 +93,7 @@
             <button class="btn-item" data-title="IPhone 12 Pro Max" data-img="../img/IPhone 12 Pro Max 128GB.png"
                 data-capacidad="128 GB" data-ram="6 GB"
                 data-pantalla="6.7'' Super Retina XDR OLED (1284 x 2778 px, 458 ppi)" data-precio="$434">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -111,7 +105,7 @@
             <button class="btn-item" data-title="IPhone 13" data-img="../img/IPhone 13 128GB.png" data-capacidad="128 GB"
                 data-ram="4 GB" data-pantalla="6.1 '' Super Retina XDR OLED (1170 x 2532 px, 460 ppi)"
                 data-precio="$379">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -121,7 +115,7 @@
             <button class="btn-item" data-title="IPhone 13 Pro Max" data-img="../img/IPhone 13 Pro Max 128GB.png"
                 data-capacidad="128 GB" data-ram="6 GB"
                 data-pantalla="6.7'' Super Retina XDR OLED (1284 x 2778 px, 458 ppi)" data-precio="$540">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -133,7 +127,7 @@
             <button class="btn-item" data-title="IPhone 14" data-img="../img/IPhone 14 128GB.png" data-capacidad="128 GB"
                 data-ram="6 GB" data-pantalla="6.1'' Super Retina XDR OLED (1170 x 2532 px, 460 ppi)"
                 data-precio="$429">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -143,7 +137,7 @@
             <button class="btn-item" data-title="IPhone 14 Plus" data-img="../img/IPhone 14 Plus 128GB.png"
                 data-capacidad="128 GB" data-ram="6 GB"
                 data-pantalla="6.7'' Super Retina XDR OLED (1284 x 2778 px, 458 ppi)" data-precio="$529">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -153,7 +147,7 @@
             <button class="btn-item" data-title="IPhone 14 Pro Max" data-img="../img/IPhone 14 Pro Max 256GB.png"
                 data-capacidad="256 GB" data-ram="6 GB"
                 data-pantalla="6.7'' Super Retina XDR OLED (1290 x 2796 px, 460 ppi)" data-precio="$710">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -166,7 +160,7 @@
             <button class="btn-item" data-title="IPhone 15" data-img="../img/IPhone 15 128GB.png" data-capacidad="128 GB"
                 data-ram="6 GB" data-pantalla="6.1'' Super Retina XDR OLED (1179 x 2556 px, 460 ppi)"
                 data-precio="$579">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -176,7 +170,7 @@
             <button class="btn-item" data-title="IPhone 15 Pro Max" data-img="../img/IPhone 15 Pro Max 256GB.png"
                 data-capacidad="256 GB" data-ram="8 GB"
                 data-pantalla="6.7'' Super Retina XDR OLED (1290 x 2796 px, 460 ppi)" data-precio="$878">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -188,7 +182,7 @@
             <button class="btn-item" data-title="IPhone 16" data-img="../img/IPhone 16 128GB.png" data-capacidad="128 GB"
                 data-ram="8 GB" data-pantalla="6.1'' LTPO Super Retina XDR OLED (120 Hz, HDR10, Dolby Vision)"
                 data-precio="$799">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -198,7 +192,7 @@
             <button class="btn-item" data-title="IPhone 16 Pro Max" data-img="../img/IPhone 16 Pro Max 256GB.png"
                 data-capacidad="256 GB" data-ram="8 GB"
                 data-pantalla="6.7'' LTPO Super Retina XDR OLED (120 Hz, HDR10, Dolby Vision)" data-precio="$1170">
-                Ver información
+                Detalles
             </button>
         </div>
 
@@ -208,33 +202,15 @@
             <button class="btn-item" data-title="IPhone 16 Pro Max" data-img="../img/IPhone 16 Pro Max 512GB.png"
                 data-capacidad="512 GB" data-ram="8 GB"
                 data-pantalla="6.7'' LTPO Super Retina XDR OLED (120 Hz, HDR10, Dolby Vision)" data-precio="$1380">
-                Ver información
+                Detalles
             </button>
         </div>
 
     </div>
 
 
-    <script src="../Js/main.js"></script>
+    <script src="../Js/main.js"></script> 
 
-    <div id="product-modal" class="modal-overlay" style="display:none;">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <div class="modal-flex">
-                <img id="modal-img" src="" alt=""
-                    style="width: 160px; height: 160px; object-fit: cover; border-radius: 12px;">
-                <div class="modal-info">
-                    <h3 id="modal-title"></h3>
-                    <ul id="modal-details" style="list-style:none; padding:0; color:#222; text-align:left;">
-                        <li><strong>Capacidad:</strong> <span id="modal-capacidad"></span></li>
-                        <li><strong>RAM:</strong> <span id="modal-ram"></span></li>
-                        <li><strong>Pantalla:</strong> <span id="modal-pantalla"></span></li>
-                        <li><strong>Precio:</strong> <span id="modal-precio"></span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
 
 </body>
 
