--- a/Styles/mediaQuery.css
+++ b/Styles/mediaQuery.css
@@ -102,28 +102,34 @@
         flex-direction: column;
     }
 
-
-
     /*Tienda*/
 
+    #Store{
+        padding: 0;
+    }
+
     .store-container{
+        width: 100%;
         display:flex;
         flex-direction:column;
     }
 
     .items-store {
-        gap: 10px;
+        width: 100%;
+        gap: auto;
     }
 
     .item {
-        max-width: 130px;
-        min-width: 110px;
-        flex: 1 1 auto;
+        width: 130px;
+        height: 260px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     .item img {
         width: 100%;
-        height: 150px;
+        height: 140px;
         object-fit: cover;
         border-radius: 8px;
     }
@@ -175,7 +181,7 @@
     }
 
     .suggestions-list.active {
-        display: block;
+        display: none;
     }
 
     .suggestions-list li {
