--- a/includes/Honor.html
+++ b/includes/Honor.html
@@ -15,11 +15,11 @@
             <button class="btn-item" 
                 data-title="Honor 90 Lite" 
                 data-img="../img/Honor 90 lite 256GB.png" 
-                data-capacidad=""
-                data-ram="" 
-                data-pantalla=""
-                data-precio="">
-                Ver información
+                data-capacidad="256 GB"
+                data-ram="8 GB" 
+                data-pantalla="	6.7'' AMOLED (2376 x 1080 px, ~392 ppi)"
+                data-precio="$120">
+                Detalles
             </button>
         </div> 
 
@@ -29,11 +29,11 @@
             <button class="btn-item" 
                 data-title="Honor Magic 7 Lite" 
                 data-img="../img/Honor Magic 7 lite 256GB.png" 
-                data-capacidad=""
-                data-ram="" 
-                data-pantalla=""
-                data-precio="">
-                Ver información
+                data-capacidad="256 GB"
+                data-ram="8 GB" 
+                data-pantalla="	6.67'' AMOLED (2400 x 1080 px, ~395 ppi)"
+                data-precio="$280">
+                Detalles
             </button>
         </div> 
 
@@ -41,24 +41,7 @@
     
     <script src="../Js/main.js"></script>
 
-    <div id="product-modal" class="modal-overlay" style="display:none;">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <div class="modal-flex">
-                <img id="modal-img" src="" alt=""
-                    style="width: 160px; height: 160px; object-fit: cover; border-radius: 12px;">
-                <div class="modal-info">
-                    <h3 id="modal-title"></h3>
-                    <ul id="modal-details" style="list-style:none; padding:0; color:#222; text-align:left;">
-                        <li><strong>Capacidad:</strong> <span id="modal-capacidad"></span></li>
-                        <li><strong>RAM:</strong> <span id="modal-ram"></span></li>
-                        <li><strong>Pantalla:</strong> <span id="modal-pantalla"></span></li>
-                        <li><strong>Precio:</strong> <span id="modal-precio"></span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+   
 
 </body>
 </html>
