--- a/includes/Infinix.html
+++ b/includes/Infinix.html
@@ -11,15 +11,15 @@
 
         <div class="item" data-category="Infinix">
             <img src="../img/Itel A50C 32GB.png" alt="">
-            <h3>Itel A50</h3>
+            <h3>Itel A50C</h3>
             <button class="btn-item" 
-                data-title="Itel A50" 
+                data-title="Itel A50C" 
                 data-img="../img/Itel A50C 32GB.png" 
-                data-capacidad=""
-                data-ram="" 
-                data-pantalla=""
-                data-precio="">
-                Ver información
+                data-capacidad="32GB"
+                data-ram="3 GB" 
+                data-pantalla="6.6'' IPS LCD (720 x 1600 px, ~266 ppi)"
+                data-precio="$78">
+                Detalles
             </button>
         </div> 
 
@@ -29,36 +29,144 @@
             <button class="btn-item" 
                 data-title="Itel A50" 
                 data-img="../img/Itel A50 64GB.png" 
-                data-capacidad=""
-                data-ram="" 
-                data-pantalla=""
-                data-precio="">
-                Ver información
+                data-capacidad="64 GB"
+                data-ram="4 GB" 
+                data-pantalla="6.6'' IPS LCD (720 x 1600 px, ~266 ppi)"
+                data-precio="$85">
+                Detalles
             </button>
         </div> 
 
+        <div class="item" data-category="Infinix">
+            <img src="../img/Infinix Smart 10 HD 64GB.png" alt="">
+            <h3>Infinix Smart 10 HD</h3>
+            <button class="btn-item" 
+                data-title="Infinix Smart 10 HD" 
+                data-img="../img/Infinix Smart 10 HD 64GB.png" 
+                data-capacidad="64GB"
+                data-ram="3 GB" 
+                data-pantalla="6.52'' IPS LCD, HD+ (720 x 1600 px)"
+                data-precio="$85">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Infinix">
+            <img src="../img/Infinix Smart 10 HD 128GB.png" alt="">
+            <h3>Infinix Smart 10 HD</h3>
+            <button class="btn-item" 
+                data-title="Infinix Smart 10 HD" 
+                data-img="../img/Infinix Smart 10 HD 128GB.png" 
+                data-capacidad="128GB"
+                data-ram="3 GB" 
+                data-pantalla="6.52'' IPS LCD, HD+ (720 x 1600 px)"
+                data-precio="$95">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Infinix">
+            <img src="../img/Infinix Hot 50i 256GB.png" alt="">
+            <h3>Infinix Hot 50i</h3>
+            <button class="btn-item" 
+                data-title="Infinix Hot 50i" 
+                data-img="../img/Infinix Hot 50i 256GB.png" 
+                data-capacidad="256GB"
+                data-ram="4 GB" 
+                data-pantalla="6.82'' IPS LCD, HD+ (720 x 1612 px)"
+                data-precio="$112">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Infinix">
+            <img src="../img/Infinix Not 50 Pro 256GB.png" alt="">
+            <h3>Infinix Hot 50 Pro</h3>
+            <button class="btn-item" 
+                data-title="Infinix Hot 50 Pro" 
+                data-img="../img/Infinix Not 50 Pro 256GB.png" 
+                data-capacidad="256GB"
+                data-ram="8 GB" 
+                data-pantalla="6.67'' AMOLED, Full HD+ (1080 x 2400 px)"
+                data-precio="$232">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Infinix">
+            <img src="../img/Infinix Hot 60i 256GB.png" alt="">
+            <h3>Infinix Hot 60i</h3>
+            <button class="btn-item" 
+                data-title="Infinix Hot 60i" 
+                data-img="../img/Infinix Hot 60i 256GB.png" 
+                data-capacidad="256GB"
+                data-ram="4 GB" 
+                data-pantalla="6.6'' IPS LCD, Full HD+ (1080 x 2412 px)"
+                data-precio="$118">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Infinix">
+            <img src="../img/Infinix Hot 60 Pro 256GB.png" alt="">
+            <h3>Infinix Hot 60 Pro</h3>
+            <button class="btn-item" 
+                data-title="Infinix Hot 60 Pro" 
+                data-img="../img/Infinix Hot 60 Pro 256GB.png" 
+                data-capacidad="256GB"
+                data-ram="8 GB" 
+                data-pantalla="6.67'' AMOLED, Full HD+ (1080 x 2400 px)"
+                data-precio="$167">
+                Detalles
+            </button>
+        </div>
+        
+        <div class="item" data-category="Infinix">
+            <img src="../img/Infinix Hot 60 Pro+ 256GB.png" alt="">
+            <h3>Infinix Hot 60 Pro+</h3>
+            <button class="btn-item" 
+                data-title="Infinix Hot 60 Pro+" 
+                data-img="../img/Infinix Hot 60 Pro+ 256GB.png" 
+                data-capacidad="256GB"
+                data-ram="8 GB" 
+                data-pantalla="6.67'' AMOLED, Full HD+ (1080 x 2400 px)"
+                data-precio="$193">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Infinix">
+            <img src="../img/Infinix GT 30 Pro 256GB.png" alt="">
+            <h3>Infinix GT 30 Pro</h3>
+            <button class="btn-item" 
+                data-title="Infinix GT 30 Pro" 
+                data-img="../img/Infinix GT 30 Pro 256GB.png" 
+                data-capacidad="256GB"
+                data-ram="12 + 12 GB" 
+                data-pantalla="6.67'' AMOLED, Full HD+ (1080 x 2400 px), tasa de refresco 120Hz"
+                data-precio="$291">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Infinix">
+            <img src="../img/Infinix GT 30 Pro 512GB.png" alt="">
+            <h3>Infinix GT 30 Pro</h3>
+            <button class="btn-item" 
+                data-title="Infinix GT 30 Pro" 
+                data-img="../img/Infinix GT 30 Pro 512GB.png" 
+                data-capacidad="512GB"
+                data-ram="12 + 12 GB" 
+                data-pantalla="6.67'' AMOLED, Full HD+ (1080 x 2400 px), tasa de refresco 120Hz"
+                data-precio="$315">
+                Detalles
+            </button>
+        </div>
+
+
+
     </div>
     
-    <script src="../Js/main.js"></script>
-
-    <div id="product-modal" class="modal-overlay" style="display:none;">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <div class="modal-flex">
-                <img id="modal-img" src="" alt=""
-                    style="width: 160px; height: 160px; object-fit: cover; border-radius: 12px;">
-                <div class="modal-info">
-                    <h3 id="modal-title"></h3>
-                    <ul id="modal-details" style="list-style:none; padding:0; color:#222; text-align:left;">
-                        <li><strong>Capacidad:</strong> <span id="modal-capacidad"></span></li>
-                        <li><strong>RAM:</strong> <span id="modal-ram"></span></li>
-                        <li><strong>Pantalla:</strong> <span id="modal-pantalla"></span></li>
-                        <li><strong>Precio:</strong> <span id="modal-precio"></span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    
 </body>
 </html>
