--- a/includes/Samsung.html
+++ b/includes/Samsung.html
@@ -10,11 +10,112 @@
     <div class="items-store" id="items-samsung">
 
         <div class="item" data-category="Samsung">
+            <img src="../img/Galaxy A16 128GB.png" alt="Samsung Galaxy 128GB">
+            <h3>Samsung Galaxy A16</h3>
+            <button class="btn-item" data-title="Samsung Galaxy A16" data-img="../img/Galaxy A16 128GB.png"
+                data-capacidad="128 GB"
+                data-ram="4 GB" data-pantalla="6.7″ Super AMOLED FHD+ (~2340×1080, 90 Hz)" 
+                data-precio="$137">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Samsung">
+            <img src="../img/Samsung Galaxy A16 256GB.png" alt="Samsung Galaxy 256GB">
+            <h3>Samsung Galaxy A16</h3>
+            <button class="btn-item" data-title="Samsung Galaxy A16" data-img="../img/Samsung Galaxy A16 256GB.png"
+                data-capacidad="256 GB"
+                data-ram="8 GB" data-pantalla="6.7″ Super AMOLED FHD+ (~2340×1080, 90 Hz) " 
+                data-precio="$175">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Samsung">
+            <img src="../img/Samsung Galaxy A26 128GB.png" alt="Samsung Galaxy 128GB">
+            <h3>Samsung Galaxy A26</h3>
+            <button class="btn-item" data-title="Samsung Galaxy A26" data-img="../img/Samsung Galaxy A26 128GB.png"
+                data-capacidad="128 GB"
+                data-ram="6 GB" data-pantalla="	6.7″ Super AMOLED FHD+ (1080×2340, 120 Hz)" 
+                data-precio="$200">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Samsung">
+            <img src="../img/Samsung Galaxy A26 256GB.png" alt="Samsung Galaxy 128GB">
+            <h3>Samsung Galaxy A26</h3>
+            <button class="btn-item" data-title="Samsung Galaxy A26" data-img="../img/Samsung Galaxy A26 256GB.png"
+                data-capacidad="256 GB"
+                data-ram="8 GB" data-pantalla="	6.7″ Super AMOLED FHD+ (1080×2340, 120 Hz)" 
+                data-precio="$220">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Samsung">
             <img src="../img/Samsung Galaxy 128GB.png" alt="Samsung Galaxy 128GB">
             <h3>Samsung Galaxy A36</h3>
-            <button class="btn-item" data-title="Samsung Galaxy A36" data-img="../img/Samsung Galaxy 128GB.png" data-capacidad="64 GB"
-                data-ram="4 GB" data-pantalla="6.1 Liquid Retina IPS LCD (828 x 1792 px, 326 ppi)" data-precio="$250">
-                Ver información
+            <button class="btn-item" data-title="Samsung Galaxy A36" data-img="../img/Samsung Galaxy 128GB.png"
+                data-capacidad="128 GB"
+                data-ram="6 GB" data-pantalla="6.7'' AMOLED (2400 x 1080 px, ~393 ppi)" 
+                data-precio="$275">
+                Detalles
+            </button>
+        </div> 
+        
+        <div class="item" data-category="Samsung">
+            <img src="../img/Samsung Galaxy A36 256GB.png" alt="Samsung Galaxy 128GB">
+            <h3>Samsung Galaxy A36</h3>
+            <button class="btn-item" data-title="Samsung Galaxy A36" data-img="../img/Samsung Galaxy A36 256GB.png"
+                data-capacidad="256 GB"
+                data-ram="6 GB" data-pantalla="6.7″ Super AMOLED FHD+ (1080×2340, 120 Hz)" 
+                data-precio="$282">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Samsung">
+            <img src="../img/Samsung Galaxy A52 256GB.png" alt="Samsung Galaxy 256GB">
+            <h3>Samsung Galaxy A52</h3>
+            <button class="btn-item" data-title="Samsung Galaxy A52" data-img="../img/Samsung Galaxy A52 256GB.png"
+                data-capacidad="256 GB"
+                data-ram="8 GB" data-pantalla="6.7″ Super AMOLED FHD+ (1080×2340)" 
+                data-precio="$352">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Samsung">
+            <img src="../img/Samsung Galaxy S24 Ultra 512GB.png" alt="Samsung Galaxy 128GB">
+            <h3>Samsung Galaxy A36</h3>
+            <button class="btn-item" data-title="Samsung Galaxy S24 Ultra" data-img="../img/Samsung Galaxy S24 Ultra 512GB.png"
+                data-capacidad="512 GB"
+                data-ram="12 GB" data-pantalla="6.8″ AMOLED LTPO QHD+ (~3120×1440, 120 Hz)" 
+                data-precio="$863">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Samsung">
+            <img src="../img/Samsung Galaxy S25+ 256GB.png" alt="Samsung Galaxy 128GB">
+            <h3>Samsung Galaxy S25+</h3>
+            <button class="btn-item" data-title="Samsung Galaxy S25+" data-img="../img/Samsung Galaxy S25+ 256GB.png"
+                data-capacidad="256 GB"
+                data-ram="8 GB" data-pantalla="6.7″ Dynamic AMOLED 2X (≈3120×1440, 120 Hz)" 
+                data-precio="$875">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Samsung">
+            <img src="../img/Samsung Galaxy S25 Ultra 512GB.png" alt="Samsung Galaxy 128GB">
+            <h3>Samsung Galaxy S25 Ultra</h3>
+            <button class="btn-item" data-title="Samsung Galaxy S25 Ultra" data-img="../img/Samsung Galaxy S25 Ultra 512GB.png"
+                data-capacidad="512 GB"
+                data-ram="12 GB" data-pantalla="6.9″ Dynamic AMOLED 2X QHD+ (120 Hz adaptable)" 
+                data-precio="$990">
+                Detalles
             </button>
         </div> 
 
@@ -22,24 +123,7 @@
     
     <script src="../Js/main.js"></script>
 
-    <div id="product-modal" class="modal-overlay" style="display:none;">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <div class="modal-flex">
-                <img id="modal-img" src="" alt=""
-                    style="width: 160px; height: 160px; object-fit: cover; border-radius: 12px;">
-                <div class="modal-info">
-                    <h3 id="modal-title"></h3>
-                    <ul id="modal-details" style="list-style:none; padding:0; color:#222; text-align:left;">
-                        <li><strong>Capacidad:</strong> <span id="modal-capacidad"></span></li>
-                        <li><strong>RAM:</strong> <span id="modal-ram"></span></li>
-                        <li><strong>Pantalla:</strong> <span id="modal-pantalla"></span></li>
-                        <li><strong>Precio:</strong> <span id="modal-precio"></span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+    
 
 </body>
 </html>
