--- a/includes/Tecno.html
+++ b/includes/Tecno.html
@@ -27,27 +27,110 @@
         <div class="item" data-category="Tecno">
             <img src="../img/Tecno Spark 10.png" alt="">
             <h3>Tecno Spark 10</h3>
-            <button class="btn-item" data-title="Tecno Spark 10" data-img="../img/Tecno Spark 10.png" data-capacidad="" data-ram="" data-pantalla=""
-                data-precio="">
-                Ver información
+            <button class="btn-item" data-title="Tecno Spark 10" data-img="../img/Tecno Spark 10.png" 
+                data-capacidad="128 GB"                 
+                data-ram="8 GB" data-pantalla="6.6'' IPS LCD (720 x 1612 px, ~267 ppi)"
+                data-precio="$110">
+                Detalles
             </button>
         </div>
 
         <div class="item" data-category="Tecno">
             <img src="../img/Tecno Spark 30c 128GB.png" alt="">
             <h3>Tecno Spark 30C</h3>
-            <button class="btn-item" data-title="Tecno Spark 30C" data-img="../img/Tecno Spark 30c 128GB.png" data-capacidad="" data-ram="" data-pantalla=""
-                data-precio="">
-                Ver información
+            <button class="btn-item" data-title="Tecno Spark 30C" data-img="../img/Tecno Spark 30c 128GB.png" 
+                data-capacidad="128GB"                 
+                data-ram="8 GB" data-pantalla="6.67'' IPS LCD 90Hz (1080 x 2400 px, ~395 ppi)"
+                data-precio="$115">
+                Detalles
             </button>
         </div>
 
         <div class="item" data-category="Tecno">
             <img src="../img/Tecno Spark Go2024 64GB.png" alt="">
             <h3>Tecno Spark Go2024</h3>
-            <button class="btn-item" data-title="Tecno Spark Go2024" data-img="../img/Tecno Spark Go2024 64GB.png" data-capacidad="" data-ram="" data-pantalla=""
-                data-precio="">
-                Ver información
+            <button class="btn-item" data-title="Tecno Spark Go2024" data-img="../img/Tecno Spark Go2024 64GB.png" 
+                data-capacidad="64 GB"                 
+                data-ram="3 GB" data-pantalla="	6.6'' IPS LCD (720 x 1612 px, ~267 ppi)"
+                data-precio="$95">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Tecno">
+            <img src="../img/Tecno Spark Go 1S 64GB.png" alt="">
+            <h3>Tecno Spark Go 1S</h3>
+            <button class="btn-item" data-title="Tecno Spark Go 1S" data-img="../img/Tecno Spark Go 1S 64GB.png" 
+                data-capacidad="64 GB"                 
+                data-ram="4 GB" data-pantalla="	~6.6″ HD+ LCD, 90 Hz (modelo equivalente)"
+                data-precio="$90">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Tecno">
+            <img src="../img/Tecno Spark 20 pro+ 256GB.png" alt="">
+            <h3>Tecno Spark 20 Pro+</h3>
+            <button class="btn-item" data-title="Tecno Spark 20 Pro+" data-img="../img/Tecno Spark 20 pro+ 256GB.png" 
+                data-capacidad="256 GB"                 
+                data-ram="8 GB" data-pantalla="	6.78″ FHD+ AMOLED, 120 Hz "
+                data-precio="$185">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Tecno">
+            <img src="../img/Tecno Spark 30 256GB.png" alt="">
+            <h3>Tecno Spark 30</h3>
+            <button class="btn-item" data-title="Tecno Spark 30" data-img="../img/Tecno Spark 30 256GB.png" 
+                data-capacidad="256 GB"                 
+                data-ram="8 + 8 GB" data-pantalla="	~6.7″ FHD+ (cercano al Spark 30 Pro) "
+                data-precio="$140">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Tecno">
+            <img src="../img/Tecno Spark 30c 256GB.png" alt="">
+            <h3>Tecno Spark 30c</h3>
+            <button class="btn-item" data-title="Tecno Spark 30c" data-img="../img/Tecno Spark 30c 256GB.png" 
+                data-capacidad="256 GB"                 
+                data-ram="8 + 8 GB" data-pantalla="	~6.7″ LCD/FHD+ (modelo similar Spark 30)" 
+                data-precio="$130">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Tecno">
+            <img src="../img/Tecno Spark 30 pro 256GB.png" alt="">
+            <h3>Tecno Spark 30 Pro</h3>
+            <button class="btn-item" data-title="Tecno Spark 30 Pro" data-img="../img/Tecno Spark 30 pro 256GB.png" 
+                data-capacidad="256 GB"                 
+                data-ram="8 + 8 GB" data-pantalla="	~6.7″ AMOLED FHD+ (120 Hz) " 
+                data-precio="$175">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Tecno">
+            <img src="../img/Tecno Pova 6 256GB.png" alt="">
+            <h3>Tecno Pova 6</h3>
+            <button class="btn-item" data-title="Tecno Pova 6" data-img="../img/Tecno Pova 6 256GB.png" 
+                data-capacidad="256 GB"                 
+                data-ram="8 GB" data-pantalla="	 6.78″ AMOLED FHD+ (1080×2436), 120 Hz" 
+                data-precio="$215">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Tecno">
+            <img src="../img/Tecno Camon 40 pro.png" alt="">
+            <h3>Tecno Camon 40 Pro</h3>
+            <button class="btn-item" data-title="Tecno Camon 40 Pro" data-img="../img/Tecno Camon 40 pro.png" 
+                data-capacidad="256 GB"                 
+                data-ram="8 GB" data-pantalla="		6.78″ AMOLED FHD+ (1080×2436), 120 Hz (o 144 Hz en versión 5G)" 
+                data-precio="$235">
+                Detalles
             </button>
         </div>
 
@@ -55,24 +138,6 @@
 
     <script src="../Js/main.js"></script>
 
-    <div id="product-modal" class="modal-overlay" style="display:none;">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <div class="modal-flex">
-                <img id="modal-img" src="" alt=""
-                    style="width: 160px; height: 160px; object-fit: cover; border-radius: 12px;">
-                <div class="modal-info">
-                    <h3 id="modal-title"></h3>
-                    <ul id="modal-details" style="list-style:none; padding:0; color:#222; text-align:left;">
-                        <li><strong>Capacidad:</strong> <span id="modal-capacidad"></span></li>
-                        <li><strong>RAM:</strong> <span id="modal-ram"></span></li>
-                        <li><strong>Pantalla:</strong> <span id="modal-pantalla"></span></li>
-                        <li><strong>Precio:</strong> <span id="modal-precio"></span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
 
 </body>
 
