--- a/includes/Xiaomi.html
+++ b/includes/Xiaomi.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,8 +12,8 @@
             <img src="../img/Redmi 9C  64GB.png" alt="">
             <h3>Redmi 9C</h3>
             <button class="btn-item" data-title="Redmi 9C" data-img="../img/Redmi 9C  64GB.png" data-capacidad="64 GB"
-                data-ram="4 GB" data-pantalla="6.1 Liquid Retina IPS LCD (828 x 1792 px, 326 ppi)" data-precio="$250">
-                Ver información
+                data-ram="3 GB" data-pantalla="6.88'' IPS LCD (720 x 1612 px, ~258 ppi)" data-precio="$95">
+                Detalles
             </button>
         </div> 
 
@@ -22,8 +21,8 @@
             <img src="../img/Redmi 10C 64GB.png" alt="">
             <h3>Redmi 10C</h3>
             <button class="btn-item" data-title="Redmi 10C" data-img="../img/Redmi 10C 64GB.png" data-capacidad="64 GB"
-                data-ram="4 GB" data-pantalla="6.1 Liquid Retina IPS LCD (828 x 1792 px, 326 ppi)" data-precio="$250">
-                Ver información
+                data-ram="4 GB" data-pantalla="	6.71'' IPS LCD (720 x 1650 px, ~264 ppi)" data-precio="$100">
+                Detalles
             </button>
         </div> 
         
@@ -31,62 +30,99 @@
         <div class="item" data-category="Xiaomi">
             <img src="../img/Redmi 14C 256GB.png" alt="">
             <h3>Redmi 14C</h3>
-            <button class="btn-item" data-title="Redmi 14C" data-img="../img/Redmi 14C 256GB.png" data-capacidad="64 GB"
-                data-ram="4 GB" data-pantalla="6.1 Liquid Retina IPS LCD (828 x 1792 px, 326 ppi)" data-precio="$250">
-                Ver información
+            <button class="btn-item" data-title="Redmi 14C" data-img="../img/Redmi 14C 256GB.png" data-capacidad="256 GB"
+                data-ram="4 GB" data-pantalla="	6.88'' IPS LCD (720 x 1612 px, ~258 ppi)" data-precio="$115">
+                Detalles
             </button>
         </div> 
+
+        <div class="item" data-category="Xiaomi">
+            <img src="../img/Redmi 14C 128GB.png" alt="">
+            <h3>Redmi 14C</h3>
+            <button class="btn-item" data-title="Redmi 14C" data-img="../img/Redmi 14C 128GB.png" data-capacidad="128 GB"
+                data-ram="8 GB" data-pantalla="6.88″ (1640×720, 120 Hz)" data-precio="$105">
+                Detalles
+            </button>
+        </div>
+
+        <div class="item" data-category="Xiaomi">
+            <img src="../img/Redmi 14C 8-256GB.png" alt="">
+            <h3>Redmi 14C</h3>
+            <button class="btn-item" data-title="Redmi 14C" data-img="../img/Redmi 14C 8-256GB.png" data-capacidad="256 GB"
+                data-ram="8 GB" data-pantalla="6.88″ (1640×720, 120 Hz)" data-precio="$127">
+                Detalles
+            </button>
+        </div>
 
 
         <div class="item" data-category="Xiaomi">
             <img src="../img/Redmi A05 64GB.png" alt="">
             <h3>Redmi A05</h3>
             <button class="btn-item" data-title="Redmi A05" data-img="../img/Redmi A05 64GB.png" data-capacidad="64 GB"
-                data-ram="4 GB" data-pantalla="6.1 Liquid Retina IPS LCD (828 x 1792 px, 326 ppi)" data-precio="$250">
-                Ver información
+                data-ram="4 GB" data-pantalla="6.88'' IPS LCD (720 x 1612 px, ~258 ppi)" data-precio="$90">
+                Detalles
             </button>
         </div> 
 
         <div class="item" data-category="Xiaomi">
             <img src="../img/Redmi A05 128GB.png" alt="">
             <h3>Redmi A05</h3>
-            <button class="btn-item" data-title="Redmi A05" data-img="../img/Redmi A05 128GB.png" data-capacidad="64 GB"
-                data-ram="4 GB" data-pantalla="6.1 Liquid Retina IPS LCD (828 x 1792 px, 326 ppi)" data-precio="$250">
-                Ver información
+            <button class="btn-item" data-title="Redmi A05" data-img="../img/Redmi A05 128GB.png" data-capacidad="128 GB"
+                data-ram="4 GB" data-pantalla="6.88'' IPS LCD (720 x 1612 px, ~258 ppi)" data-precio="$100">
+                Detalles
             </button>
         </div> 
 
         <div class="item" data-category="Xiaomi">
             <img src="../img/Redmi Note 14 128GB.png" alt="">
             <h3>Redmi Note 14</h3>
-            <button class="btn-item" data-title="Redmi Note 14" data-img="../img/Redmi Note 14 128GB.png" data-capacidad="64 GB"
-                data-ram="4 GB" data-pantalla="6.1 Liquid Retina IPS LCD (828 x 1792 px, 326 ppi)" data-precio="$250">
-                Ver información
+            <button class="btn-item" data-title="Redmi Note 14" data-img="../img/Redmi Note 14 128GB.png" data-capacidad="128 GB"
+                data-ram="8 GB" data-pantalla="6.67'' AMOLED (2400 x 1080 px, ~395 ppi)" data-precio="$115">
+                Detalles
             </button>
         </div> 
+
+        <div class="item" data-category="Xiaomi">
+            <img src="../img/Redmi Note 14 64GB.png" alt="">
+            <h3>Redmi Note 14</h3>
+            <button class="btn-item" data-title="Redmi Note 14" data-img="../img/Redmi Note 14 64GB.png" data-capacidad="64 GB"
+                data-ram="6 GB" data-pantalla="6.67″ AMOLED (2400×1080, 120 Hz)" data-precio="$115">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Xiaomi">
+            <img src="../img/Redmi Note 14 256GB.png" alt="">
+            <h3>Redmi Note 14</h3>
+            <button class="btn-item" data-title="Redmi Note 14" data-img="../img/Redmi Note 14 256GB.png" data-capacidad="256 GB"
+                data-ram="8 GB" data-pantalla="6.67″ AMOLED (2400×1080, 120 Hz)" data-precio="$115">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Xiaomi">
+            <img src="../img/Redmi Note 14 128GB.png" alt="">
+            <h3>Redmi Note 14</h3>
+            <button class="btn-item" data-title="Redmi Note 14" data-img="../img/Redmi Note 14 128GB.png" data-capacidad="128 GB"
+                data-ram="8 GB" data-pantalla="6.67″ AMOLED (2400×1080, 120 Hz)" data-precio="$115">
+                Detalles
+            </button>
+        </div> 
+
+        <div class="item" data-category="Xiaomi">
+            <img src="../img/Redmi Note 14 pro 256GB.png" alt="">
+            <h3>Redmi Note 14 Pro</h3>
+            <button class="btn-item" data-title="Redmi Note 14 Pro" data-img="../img/Redmi Note 14 pro 256GB.png" data-capacidad="128 GB"
+                data-ram="8 GB" data-pantalla="6.67″ AMOLED (2400×1080, 120 Hz)" data-precio="$220">
+                Detalles
+            </button>
+        </div>  
 
     </div>
     
     <script src="../Js/main.js"></script>
 
-    <div id="product-modal" class="modal-overlay" style="display:none;">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <div class="modal-flex">
-                <img id="modal-img" src="" alt=""
-                    style="width: 160px; height: 160px; object-fit: cover; border-radius: 12px;">
-                <div class="modal-info">
-                    <h3 id="modal-title"></h3>
-                    <ul id="modal-details" style="list-style:none; padding:0; color:#222; text-align:left;">
-                        <li><strong>Capacidad:</strong> <span id="modal-capacidad"></span></li>
-                        <li><strong>RAM:</strong> <span id="modal-ram"></span></li>
-                        <li><strong>Pantalla:</strong> <span id="modal-pantalla"></span></li>
-                        <li><strong>Precio:</strong> <span id="modal-precio"></span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+ 
 
 </body>
 </html>
