mantenimiento de productos

--- a/includes/Infinix.html
+++ b/includes/Infinix.html
@@ -120,8 +120,10 @@
                 Detalles
             </button>
         </div>
+
+        <!-- Mantenimiento -->
         
-        <div class="item" data-category="Infinix">
+        <!-- <div class="item" data-category="Infinix">
             <img src="../img/Infinix Hot60 Pro+ 256GB.png" alt=""> 
             <h3>Infinix Hot 60 Pro+</h3>
             <button class="btn-item" 
@@ -133,7 +135,7 @@
                 data-precio="$193">
                 Detalles
             </button>
-        </div>
+        </div> -->
 
         <div class="item" data-category="Infinix">
             <img src="../img/Infinix GT 30 Pro 256GB.png" alt="">
