--- a/includes/Samsung.html
+++ b/includes/Samsung.html
@@ -97,7 +97,9 @@
             </button>
         </div> 
 
-        <div class="item" data-category="Samsung">
+        <!-- Mantenimiento -->
+
+        <!-- <div class="item" data-category="Samsung">
             <img src="../img/Samsung GalaxyS25+ 256GB.png" alt="Samsung Galaxy 128GB">
             <h3>Samsung Galaxy S25+</h3>
             <button class="btn-item" data-title="Samsung Galaxy S25+" data-img="../img/Samsung GalaxyS25+ 256GB.png"
@@ -106,7 +108,7 @@
                 data-precio="$875">
                 Detalles
             </button>
-        </div> 
+        </div>  -->
 
         <div class="item" data-category="Samsung">
             <img src="../img/Samsung Galaxy S25 Ultra 512GB.png" alt="Samsung Galaxy 128GB">
