--- a/includes/Tecno.html
+++ b/includes/Tecno.html
@@ -68,8 +68,10 @@
             </button>
         </div>
 
-        <div class="item" data-category="Tecno">
-            <img src="../img/Tecno Spark20 pro+ 256GB.png" alt="">
+        <!-- Mantenimiento -->
+
+        <!-- <div class="item" data-category="Tecno">
+            <img src="../img/Tecno Spark20 pro+ 256GB.png" alt=""> 
             <h3>Tecno Spark 20 Pro+</h3>
             <button class="btn-item" data-title="Tecno Spark 20 Pro+" data-img="../img/Tecno Spark20 pro+ 256GB.png" 
                 data-capacidad="256 GB"                 
@@ -77,7 +79,7 @@
                 data-precio="$185">
                 Detalles
             </button>
-        </div>
+        </div> -->
 
         <div class="item" data-category="Tecno">
             <img src="../img/Tecno Spark 30 256GB.png" alt="">
